@@ -1,3 +1,8 @@
+2011-03-07  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* TestFramework/Testing.h:
+	Change macro argument names to make collisions almost impossible.
+
 2011-03-06  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* gnustep-config.in:
